# src/main/java/hu/webuni/airport/model/Image.java
@@ -1,0 +1,37 @@
+package hu.webuni.airport.model;
+
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.persistence.Lob;
+
+import org.hibernate.annotations.Type;
+import org.hibernate.envers.Audited;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.EqualsAndHashCode;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+@EqualsAndHashCode(onlyExplicitlyIncluded = true)
+@Entity
+@Builder
+@Audited
+public class Image {
+
+	@Id
+	@GeneratedValue
+	private long id;
+	private String fileName;
+
+	@Lob
+	@Type(type = "org.hibernate.type.BinaryType")
+	private byte[] data;
+ 	
+}
